syntax = "proto3";

package ccbio.schema.v2;

import "buf/validate/validate.proto";
// import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// import "key/v1/key.proto";
import "chaincode/ccbio/schema/v2/state.proto";

import "google/protobuf/field_mask.proto";

import "hlf/key.proto";
import "hlf/utils.proto";
import "rbac/rbac.proto";

service BiochainSpecimenService{
    //  // Specimen functions

    // Evaluated

    rpc GetSpecimen(GetSpecimenRequest) returns (GetSpecimenResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSpecimenList(google.protobuf.Empty) returns (GetSpecimenListResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSpecimenByCollection(GetSpecimenByCollectionRequest) returns (GetSpecimenByCollectionResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSpecimenHistory(GetSpecimenHistoryRequest) returns (GetSpecimenHistoryResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
          action: ACTION_VIEW;
          domain: DOMAIN_OBJECT;
      };
    };


    rpc SpecimenCreate(SpecimenCreateRequest) returns (SpecimenCreateResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_CREATE;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc SpecimenUpdate(SpecimenUpdateRequest) returns (SpecimenUpdateResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_EDIT;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc SpecimenDelete(SpecimenDeleteRequest) returns (SpecimenDeleteRequest){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_DELETE;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc SpecimenHideTransaction(SpecimenHideTxRequest) returns (SpecimenHideTxResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_HIDDEN_TX;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc SpecimenUnHideTransaction(SpecimenUnHideTxRequest) returns (SpecimenUnHideTxResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_HIDDEN_TX;
        domain: DOMAIN_OBJECT;
      };
    };


    // Suggest

    rpc GetSuggestedUpdate(GetSuggestedUpdateRequest) returns (GetSuggestedUpdateResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW_SUGGEST;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSuggestedUpdateBySpecimen(GetSuggestedUpdateBySpecimenRequest) returns (GetSuggestedUpdateBySpecimenResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW_SUGGEST;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSuggestedUpdateByCollection(GetSuggestedUpdateByCollectionRequest) returns (GetSuggestedUpdateByCollectionResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW_SUGGEST;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc GetSuggestedUpdateList(google.protobuf.Empty) returns (GetSuggestedUpdateListResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_QUERY;
      option (rbac.operation) = {
        action: ACTION_VIEW_SUGGEST;
        domain: DOMAIN_OBJECT;
      };
    };

    rpc SuggestedUpdateCreate(SuggestedUpdateCreateRequest) returns (SuggestedUpdateCreateResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_SUGGEST_EDIT;
        domain: DOMAIN_OBJECT;
      };
    };
    rpc SpecimenUpdateApprove(SuggestedUpdateApproveRequest) returns (SuggestedUpdateApproveResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_SUGGEST_APPROVE;
        domain: DOMAIN_OBJECT;
      };
    };
    rpc SpecimenUpdateReject(SuggestedUpdateRejectRequest) returns (SuggestedUpdateRejectResponse){
      option (hlf.transaction_type) = TRANSACTION_TYPE_INVOKE;
      option (rbac.operation) = {
        action: ACTION_SUGGEST_REJECT;
        domain: DOMAIN_OBJECT;
      };
    };
}






// Specimen

  // Evaluate
    // GetSpecimen
      message GetSpecimenRequest {
        Specimen.Id id = 1 [(buf.validate.field).required = true];
      }
      message GetSpecimenResponse {
        Specimen specimen = 1 [(buf.validate.field).required = true];
      }

    // GetSpecimenList
      message GetSpecimenListResponse {
        repeated Specimen specimens = 1;
      }

    // GetSpecimenByCollection
      message GetSpecimenByCollectionRequest {
        rbac.Collection.Id id = 1 [(buf.validate.field).required = true];
      }
      message GetSpecimenByCollectionResponse {
        repeated Specimen specimens = 1;
      }

    // GetSpecimenHistory
      message GetSpecimenHistoryRequest {
        Specimen.Id id = 1 [(buf.validate.field).required = true];
        bool include_hidden = 2 [(buf.validate.field).required = true];
      }
      message GetSpecimenHistoryResponse {
        Specimen.History history = 1;
      }


  // Submit

    // SpecimenCreate
      message SpecimenCreateRequest {
            Specimen specimen = 1 [(buf.validate.field).required = true];
      }
      message SpecimenCreateResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }

    // SpecimenUpdate
      message SpecimenUpdateRequest {
          Specimen specimen = 1 [(buf.validate.field).required = true];
          google.protobuf.FieldMask update_mask = 2;
      }
      message SpecimenUpdateResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
          google.protobuf.FieldMask update_mask = 2;
      }


    // SpecimenDelete
      message SpecimenDeleteRequest {
        Specimen.Id id = 1 [(buf.validate.field).required = true];
      }
      message SpecimenDeleteResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }

    // SpecimenHideTx
      message SpecimenHideTxRequest {
          Specimen.Id id = 1 [(buf.validate.field).required = true];
          Specimen.HiddenTx tx = 2 [(buf.validate.field).required = true];
      }
      message SpecimenHideTxResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }

    // SpecimenUnHideTx
      message SpecimenUnHideTxRequest {
          Specimen.Id id = 1 [(buf.validate.field).required = true];
          Specimen.HiddenTx tx = 2 [(buf.validate.field).required = true];
      }
      message SpecimenUnHideTxResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }










// SuggestedUpdate

  // Evaluate

    // GetSuggestedUpdate
      message GetSuggestedUpdateRequest {
        SuggestedUpdate.Id id = 1 [(buf.validate.field).required = true];
      }
      message GetSuggestedUpdateResponse {
        SuggestedUpdate suggested_update = 1;
      }


    // GetSuggestedUpdateBySpecimen
      message GetSuggestedUpdateBySpecimenRequest {
        Specimen.Id id = 1 [(buf.validate.field).required = true];
      }
      message GetSuggestedUpdateBySpecimenResponse {
          repeated SuggestedUpdate suggested_updates = 1;
      }

    // GetSuggestedUpdateByCollection
      message GetSuggestedUpdateByCollectionRequest {
        rbac.Collection.Id id = 1 [(buf.validate.field).required = true];
      }
      message GetSuggestedUpdateByCollectionResponse {
          repeated SuggestedUpdate suggested_updates = 1;
      }

    // GetSuggestedUpdateListResponse
      message GetSuggestedUpdateListResponse {
          repeated SuggestedUpdate suggested_updates = 1;
      }




  // Submit

    // SuggestedUpdateCreate
      message SuggestedUpdateCreateRequest {
          SuggestedUpdate suggested_update = 1 [(buf.validate.field).required = true];
      }
      message SuggestedUpdateCreateResponse {
          SuggestedUpdate suggested_update = 1 [(buf.validate.field).required = true];
      }

    // SpecimenUpdateApprove
      message SuggestedUpdateApproveRequest {
          SuggestedUpdate.Id id = 1 [(buf.validate.field).required = true];
          string comment = 2 [(buf.validate.field).required = true];
      }
      message SuggestedUpdateApproveResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }


    // SpecimenUpdateReject
      message SuggestedUpdateRejectRequest {
          SuggestedUpdate.Id id = 1 [(buf.validate.field).required = true];
          string comment = 2 [(buf.validate.field).required = true];
      }
      message SuggestedUpdateRejectResponse {
          Specimen specimen = 1 [(buf.validate.field).required = true];
      }
